[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "openmc_serpent_adapter"
version = "0.1.0"
description = "Tool to convert Serpent input files to OpenMC classes/XML"
readme = "README.md"
authors = [
  { name = "Seda Yilmaz", email = "syilmazk@purdue.edu" },
  { name = "Paul Romano", email = "paul.k.romano@gmail.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.8"

dependencies = [
  "numpy",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
"Bug Tracker" = "https://github.com/openmc-dev/openmc_serpent_adapter/issues"
Discussions = "https://openmc.discourse.org"
"Source Code" = "https://github.com/openmc-dev/openmc_serpent_adapter"

[project.scripts]
serpent_to_openmc = "openmc_serpent_adapter.serpent_conversion:main"
